# powermanim

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  README.md  env.yaml  index.html  index.json  index.xml  manifest.webmanifest  mkdocs.yml  pyproject.toml  robots.txt  setup.cfg  sitemap.xml
.github/workflows/: publish.yml  publish_docs.yml  test_suite.yml  tests.yml
animations/: index.html  index.xml
animations/arrangedbullets/: index.html
animations/bulletlist/: index.html
animations/chartbars/: index.html
animations/directionalarrow/: index.html
animations/groupactivable/: index.html
animations/invariance/: index.html
animations/numberslider/: index.html
animations/page/1/: index.html
animations/reference/: index.html
animations/sectiontitle/: index.html
animations/switchpalette/: index.html
animations/vgrouphighlight/: index.html
author/: index.html  index.xml
authors/: index.html  index.xml
authors/page/1/: index.html
categories/: index.html  index.xml
categories/page/1/: index.html
category/components/: index.html  index.xml
category/layouts/: index.html  index.xml
category/templates/: index.html  index.xml
conf/: default.yaml
conf/nn/: default.yaml
css/: wowchemy.f66ed50554019f619b9bd1650ab51ee1.css
docs/: README.md  go.mod  index.html  index.md  index.xml
docs/assets/scss/: custom.scss
docs/chapter1/: index.html  index.xml
docs/chapter1/reading-list/: index.html
docs/chapter1/syllabus/: index.html
docs/chapter1/takeaways/: index.html
docs/chapter2/: index.html  index.xml
en/js/: wowchemy.min.53e2d4aa5b5aee6f858cf53dc1025ec4.js  wowchemy.min.f43c78bffe8023bbea6ec07ad07d1802.js
src/powermanim/: __init__.py  run.py
tag/components/: index.html  index.xml
tag/layouts/: index.html  index.xml
tag/templates/: index.html  index.xml
tags/: index.html  index.xml
tests/: conftest.py  test_checkpoint.py  test_configuration.py  test_resume.py
tests/components/: test_barcharts.py
tests/showcase/: test_showcasing.py
(+91 files in other folders)
