[metadata]
name = powermanim
description = Manim extension with custom components, layouts and slide templates aimed to ease the development of live presentations.
url = https://github.com/lucmos/powermanim
long_description = file: README.md
long_description_content_type = text/markdown
author = Luca Moschella
author_email = luca.moschella94@gmail.com
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    rich
    dvc
    python-dotenv
    matplotlib
    stqdm

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
